--- a/.env.sample.devcontainer
+++ b/.env.sample.devcontainer
@@ -1,4 +1,4 @@
-DBNAME=app
-DBHOST=localhost
-DBUSER=app_user
-DBPASS=app_password
+DBNAME=postgres
+DBHOST=universityapplication-server
+DBUSER=otpljolaqm
+DBPASS=2HO2E0P83B7T3NZ8$
