--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-DBNAME=<database name>
-DBHOST=<database-hostname>
-DBUSER=<db-user-name>
-DBPASS=<db-password>
+DBNAME=<postgres>
+DBHOST=<universityapplication-server>
+DBUSER=<otpljolaqm>
+DBPASS=<2HO2E0P83B7T3NZ8$>
